<resources>
    <string name="app_name">DuckStation</string>
    <string name="settings_console_tty_output">Enable TTY Output</string>
    <string name="settings_console_fast_boot">Fast Boot</string>
    <string name="settings_osd_show_messages">Show Messages</string>
    <string name="settings_osd_show_speed">Show Emulation Speed</string>
    <string name="settings_osd_show_show_fps">Show Game Frame Rate</string>
    <string name="settings_osd_show_show_vps">Show Display FPS</string>
    <string name="settings_gpu_resolution_scale">Resolution Scale</string>
    <string name="settings_cpu_overclocking">CPU Overclocking</string>
    <string name="settings_cdrom_region_check">Region Check</string>
    <string name="settings_summary_cdrom_region_check">Prevents discs from incorrect regions being read by the emulator. Usually safe to disable.</string>
    <string name="settings_cdrom_preload_image_to_ram">Preload Image to RAM</string>
    <string name="settings_summary_preload_image_to_ram">Loads the game image into RAM. Useful for network paths that may become unreliable during gameplay. In some cases also eliminates stutter when games initiate audio track playback.</string>
    <string name="settings_pgxp_vertex_cache">PGXP Vertex Cache</string>
    <string name="settings_summary_pgxp_vertex_cache">Uses screen coordinates as a fallback when tracking vertices through memory fails. May improve PGXP compatibility.</string>
    <string name="settings_pgxp_cpu_mode">PGXP CPU Mode</string>
    <string name="settings_summary_pgxp_cpu_mode">Tries to track vertex manipulation through the CPU. Some games require this option for PGXP to be effective. Very high performance penalty.</string>
    <string name="settings_cpu_recompiler_icache">CPU Recompiler ICache</string>
    <string name="settings_summary_cpu_recompiler_icache">Determines whether the CPU\'s instruction cache is simulated in the recompiler. Improves accuracy at a small cost to performance. If games are running too fast, try enabling this option.</string>
    <string name="settings_cpu_recompiler_fastmem">CPU Recompiler Fast Memory Access</string>
    <string name="settings_summary_cpu_recompiler_fastmem">Makes guest memory access more efficient by using page faults and backpatching. Disable if it is unstable on your device.</string>
    <string name="settings_presented_frame_limit">Presented Frame Limit</string>
    <string name="settings_logging_level">Logging Level</string>
    <string name="settings_log_to_file">Log To File</string>
    <string name="settings_summary_log_to_file">Writes log messages to duckstation.log in your user directory. Only use for debugging as it slows down emulation.</string>
    <string name="settings_log_to_logcat">Log To Logcat</string>
    <string name="settings_summary_log_to_logcat">Writes log messages to the Android message logger. Only useful when attached to a computer with adb.</string>
    <string name="settings_crop_mode">Crop Mode</string>
    <string name="settings_aspect_ratio">Aspect Ratio</string>
    <string name="settings_linear_upscaling">Linear Upscaling</string>
    <string name="settings_integer_upscaling">Integer Upscaling</string>
    <string name="settings_summary_linear_upscaling">Smooths out the image when upscaling the console to the screen.</string>
    <string name="settings_summary_integer_upscaling">Adds padding to the display area to ensure that the ratio between pixels on the host to pixels in the console is an integer number. May result in a sharper image in some 2D games.</string>
    <string name="settings_summary_osd_show_messages">Shows on-screen-display messages when events occur such as save states being created/loaded, screenshots being taken, etc.</string>
    <string name="settings_summary_osd_show_speed">Shows the current emulation speed of the system in the top-right corner of the display as a percentage.</string>
    <string name="settings_summary_osd_show_fps">Shows the internal frame rate of the game in the top-right corner of the display.</string>
    <string name="settings_summary_osd_show_vps">Shows the number of frames (or v-syncs) displayed per second by the system in the top-right corner of the display.</string>
    <string name="settings_cdrom_read_speedup">CD-ROM Read Speedup</string>
    <string name="settings_summary_cdrom_read_speedup">Speeds up CD-ROM reads by the specified factor. Only applies to double-speed reads, and is ignored when audio is playing. May improve loading speeds in some games, at the cost of breaking others.</string>
    <string name="settings_summary_console_fast_boot">Skips the BIOS shell/intro, booting directly into the game. Usually safe to enable, but some games break.</string>
    <string name="settings_msaa">Multisample Antialiasing</string>
    <string name="settings_true_color">True Color Rendering (24-bit, disables dithering)</string>
    <string name="settings_summary_true_color">This produces nicer looking gradients at the cost of making some colours look slightly different. Disabling the option also enables dithering. Most games are compatible with this option.</string>
    <string name="settings_scaled_dithering">Scaled Dithering (scale dither pattern to resolution)</string>
    <string name="settings_summary_scaled_dithering">Scales the dither pattern to the resolution scale of the emulated GPU. This makes the dither pattern much less obvious at higher resolutions. Usually safe to enable, and only supported by the hardware renderers.</string>
    <string name="settings_disable_interlacing">Disable Interlacing (force progressive render/scan)</string>
    <string name="settings_summary_disable_interlacing">Forces the rendering and display of frames to progressive mode. This removes the \"combing\" effect seen in 480i games by rendering them in 480p. Usually safe to enable.</string>
    <string name="settings_texture_filtering">Texture Filtering</string>
    <string name="settings_force_ntsc_timings">Force NTSC Timings (60hz-on-PAL)</string>
    <string name="settings_summary_force_ntsc_timings">Uses NTSC frame timings when the console is in PAL mode, forcing PAL games to run at 60hz.</string>
    <string name="settings_widescreen_hack">Widescreen Hack</string>
    <string name="settings_summary_widescreen_hack">Scales vertex positions in screen-space to a widescreen aspect ratio, essentially increasing the field of view from 4:3 to 16:9 in 3D games. Not be compatible with all games.</string>
    <string name="settings_force_4_3_for_24bit">Force 4:3 For 24-Bit Display</string>
    <string name="settings_summary_force_4_3_for_24bit">Switches back to 4:3 display aspect ratio when displaying 24-bit content, usually FMVs.</string>
    <string name="settings_chroma_smoothing_24bit">Chroma Smoothing For 24-Bit Display</string>
    <string name="settings_summary_chrome_smoothing_24bit">Smooths out blockyness between colour transitions in 24-bit content, usually FMVs. Only applies to the hardware renderers.</string>
    <string name="settings_pgxp_geometry_correction">PGXP Geometry Correction</string>
    <string name="settings_summary_pgxp_geometry_correction"><![CDATA[Reduces \"wobbly\" polygons and \"warping\" textures that are common in PS1 games. >Only works with the hardware renderers. May not be compatible with all games.]]></string>
    <string name="settings_pgxp_culling_correction">PGXP Culling Correction</string>
    <string name="settings_summary_pgxp_culling_correction">Increases the precision of polygon culling, reducing the number of holes in geometry. Requires geometry correction enabled.</string>
    <string name="settings_pgxp_texture_correction">PGXP Texture Correction</string>
    <string name="settings_summary_pgxp_texture_correction">Uses perspective-correct interpolation for texture coordinates and colors, straightening out warped textures. Requires geometry correction enabled.</string>
    <string name="settings_pgxp_preserve_projection_precision">PGXP Preserve Projection Precision</string>
    <string name="settings_summary_pgxp_preserve_projection_precision">Enables additional precision for PGXP. May improve visuals in some games but break others.</string>
    <string name="settings_pgxp_depth_buffer">PGXP Depth Buffer</string>
    <string name="settings_summary_pgxp_depth_buffer">Attempts to reduce polygon Z-fighting by testing pixels against the depth values from PGXP. Low compatibility, but can work well in some games.</string>
    <string name="settings_gpu_thread">Threaded GPU Rendering</string>
    <string name="settings_summary_gpu_thread">Uses a second thread for drawing graphics. Currently only available for the software renderer, but can provide a significant speed improvement, and is safe to use.</string>
    <string name="settings_gpu_threaded_presentation">Threaded GPU Presentation</string>
    <string name="settings_summary_gpu_threaded_presentation">Presents frames on a background thread when fast forwarding or vsync is disabled. This can measurably improve performance in the Vulkan renderer.</string>
    <string name="settings_language">Language (restart to apply)</string>
    <string name="settings_disable_all_enhancements">Disable All Enhancements</string>
    <string name="settings_summary_disable_all_enhancements">Temporarily disables all enhancements, which can be useful when debugging issues.</string>
    <string name="settings_downsample_mode">Downsampling</string>
    <string name="settings_sustained_performance_mode">Sustained Performance Mode</string>
    <string name="settings_summary_sustained_performance_mode">Enables Android\'s sustained performance mode. May result in more consistent framerates for long sessions on some devices.</string>
    <string name="settings_osd_show_show_resolution">Show Resolution</string>
    <string name="settings_summary_osd_show_resolution">Shows the resolution the game is rendering at in the top-right corner of the display.</string>
    <string name="settings_summary_display_stretch">Stretches the active display to fill the screen.</string>
    <string name="settings_display_stretch">Stretch To Fill</string>
    <string name="settings_achievements_enable">Enable RetroAchievements</string>
    <string name="settings_summary_achievements_enable">When enabled and logged in, DuckStation will scan for achievements on startup.</string>
    <string name="settings_achievements_challenge_mode">Enable Hardcore Mode</string>
    <string name="settings_summary_achievements_challenge_mode">Challenge mode. Disables save states, patch code, and slowdown functions, but you receive double the achievement points. Cannot be toggled while ingame.</string>
    <string name="settings_achievements_rich_presence">Enable Rich Presence</string>
    <string name="settings_summary_achievements_rich_presence">Rich presence information will be collected and sent to the server where supported.</string>
    <string name="settings_achievements_username">User Name</string>
    <string name="settings_achievements_token_generation_time">Token Generation Time</string>
    <string name="settings_achievements_login">Login</string>
    <string name="settings_summary_achievements_login">Logs in to your account to record achievements.</string>
    <string name="settings_achievements_register">Register</string>
    <string name="settings_summary_achievements_register">Opens a link to create a new account.</string>
    <string name="settings_achievements_logout">Logout</string>
    <string name="settings_summary_achievements_logout">Logs out of your account. No new achievements will be recorded.</string>
    <string name="settings_achievements_view_profile">View Profile</string>
    <string name="settings_summary_achievements_view_profile">Opens a link to your profile.</string>
    <string name="settings_achievements_disclaimer">DuckStation uses RetroAchievements (retroachievements.org) as an achievement database and for tracking progress.</string>
</resources>