<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="CDROM/ReadSpeedup"
        app:title="@string/settings_cdrom_read_speedup"
        app:entries="@array/settings_cdrom_read_speedup_entries"
        app:entryValues="@array/settings_cdrom_read_speedup_values"
        app:defaultValue="1"
        app:summary="@string/settings_summary_cdrom_read_speedup"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="BIOS/PatchFastBoot"
        app:title="@string/settings_console_fast_boot"
        app:defaultValue="false"
        app:summary="@string/settings_summary_console_fast_boot"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:key="GPU/ResolutionScale"
        app:title="@string/settings_gpu_resolution_scale"
        app:entries="@array/settings_gpu_resolution_scale_entries"
        app:entryValues="@array/settings_gpu_resolution_scale_values"
        app:defaultValue="1"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:key="GPU/MSAA"
        app:title="@string/settings_msaa"
        app:entries="@array/settings_gpu_msaa_entries"
        app:entryValues="@array/settings_gpu_msaa_values"
        app:defaultValue="1"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="GPU/TrueColor"
        app:title="@string/settings_true_color"
        app:summary="@string/settings_summary_true_color"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/ScaledDithering"
        app:title="@string/settings_scaled_dithering"
        app:defaultValue="true"
        app:summary="@string/settings_summary_scaled_dithering"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/DisableInterlacing"
        app:title="@string/settings_disable_interlacing"
        app:defaultValue="true"
        app:summary="@string/settings_summary_disable_interlacing"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="GPU/TextureFilter"
        app:title="@string/settings_texture_filtering"
        app:entries="@array/settings_gpu_texture_filter_names"
        app:entryValues="@array/settings_gpu_texture_filter_values"
        app:defaultValue="Nearest"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/ForceNTSCTimings"
        app:title="@string/settings_force_ntsc_timings"
        app:defaultValue="false"
        app:summary="@string/settings_summary_force_ntsc_timings"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/WidescreenHack"
        app:title="@string/settings_widescreen_hack"
        app:defaultValue="false"
        app:summary="@string/settings_summary_widescreen_hack"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="Display/Force4_3For24Bit"
        app:title="@string/settings_force_4_3_for_24bit"
        app:defaultValue="false"
        app:summary="@string/settings_summary_force_4_3_for_24bit"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/ChromaSmoothing24Bit"
        app:title="@string/settings_chroma_smoothing_24bit"
        app:defaultValue="false"
        app:summary="@string/settings_summary_chrome_smoothing_24bit"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/PGXPEnable"
        app:title="@string/settings_pgxp_geometry_correction"
        app:defaultValue="false"
        app:summary="@string/settings_summary_pgxp_geometry_correction"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/PGXPCulling"
        app:title="@string/settings_pgxp_culling_correction"
        app:dependency="GPU/PGXPEnable"
        app:defaultValue="true"
        app:summary="@string/settings_summary_pgxp_culling_correction"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/PGXPTextureCorrection"
        app:title="@string/settings_pgxp_texture_correction"
        app:dependency="GPU/PGXPEnable"
        app:defaultValue="true"
        app:summary="@string/settings_summary_pgxp_texture_correction"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/PGXPPreserveProjFP"
        app:title="@string/settings_pgxp_preserve_projection_precision"
        app:dependency="GPU/PGXPEnable"
        app:defaultValue="false"
        app:summary="@string/settings_summary_pgxp_preserve_projection_precision"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="GPU/PGXPDepthBuffer"
        app:title="@string/settings_pgxp_depth_buffer"
        app:dependency="GPU/PGXPEnable"
        app:defaultValue="false"
        app:summary="@string/settings_summary_pgxp_depth_buffer"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
