<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="Main/Language"
        app:title="@string/settings_language"
        app:defaultValue="none"
        app:entries="@array/settings_language_entries"
        app:entryValues="@array/settings_language_values"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Main/DisableAllEnhancements"
        app:title="@string/settings_disable_all_enhancements"
        app:defaultValue="false"
        app:summary="@string/settings_summary_disable_all_enhancements"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Main/SustainedPerformanceMode"
        app:title="@string/settings_sustained_performance_mode"
        app:defaultValue="false"
        app:summary="@string/settings_summary_sustained_performance_mode"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:key="CPU/Overclock"
        app:title="@string/settings_cpu_overclocking"
        app:defaultValue="100"
        app:entries="@array/settings_advanced_cpu_overclock_entries"
        app:entryValues="@array/settings_advanced_cpu_overclock_values"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="CDROM/RegionCheck"
        app:title="@string/settings_cdrom_region_check"
        app:defaultValue="false"
        app:summary="@string/settings_summary_cdrom_region_check"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="CDROM/LoadImageToRAM"
        app:title="@string/settings_cdrom_preload_image_to_ram"
        app:defaultValue="false"
        app:summary="@string/settings_summary_preload_image_to_ram"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="GPU/UseThread"
        app:title="@string/settings_gpu_thread"
        app:defaultValue="true"
        app:summary="@string/settings_summary_gpu_thread"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="GPU/ThreadedPresentation"
        app:title="@string/settings_gpu_threaded_presentation"
        app:defaultValue="true"
        app:summary="@string/settings_summary_gpu_threaded_presentation"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="GPU/PGXPVertexCache"
        app:title="@string/settings_pgxp_vertex_cache"
        app:defaultValue="false"
        app:summary="@string/settings_summary_pgxp_vertex_cache"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="GPU/PGXPCPU"
        app:title="@string/settings_pgxp_cpu_mode"
        app:defaultValue="false"
        app:summary="@string/settings_summary_pgxp_cpu_mode"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="CPU/RecompilerICache"
        app:title="@string/settings_cpu_recompiler_icache"
        app:defaultValue="false"
        app:summary="@string/settings_summary_cpu_recompiler_icache"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:key="CPU/FastmemMode"
        app:title="@string/settings_cpu_recompiler_fastmem"
        app:entries="@array/settings_cpu_fastmem_mode_entries"
        app:entryValues="@array/settings_cpu_fastmem_mode_values"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="MMap"
        app:summary="@string/settings_summary_cpu_recompiler_fastmem"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:key="Display/MaxFPS"
        app:title="@string/settings_presented_frame_limit"
        app:defaultValue="60"
        app:entries="@array/settings_advanced_display_fps_limit_entries"
        app:entryValues="@array/settings_advanced_display_fps_limit_values"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="BIOS/PatchTTYEnable"
        app:title="@string/settings_console_tty_output"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />
    <ListPreference
        app:key="Logging/LogLevel"
        app:title="@string/settings_logging_level"
        app:defaultValue="Warning"
        app:entries="@array/settings_log_level_entries"
        app:entryValues="@array/settings_log_level_values"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Logging/LogToFile"
        app:title="@string/settings_log_to_file"
        app:defaultValue="false"
        app:summary="@string/settings_summary_log_to_file"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Logging/LogToDebug"
        app:title="@string/settings_log_to_logcat"
        app:defaultValue="false"
        app:summary="@string/settings_summary_log_to_logcat"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
