<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="Display/CropMode"
        app:title="@string/settings_crop_mode"
        app:entries="@array/settings_display_crop_mode_entries"
        app:entryValues="@array/settings_display_crop_mode_values"
        app:defaultValue="Overscan"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="Display/AspectRatio"
        app:title="@string/settings_aspect_ratio"
        app:entries="@array/settings_display_aspect_ratio_names"
        app:entryValues="@array/settings_display_aspect_ratio_values"
        app:defaultValue="Auto (Game Native)"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="GPU/DownsampleMode"
        app:title="@string/settings_downsample_mode"
        app:entries="@array/settings_downsample_mode_entries"
        app:entryValues="@array/settings_downsample_mode_values"
        app:defaultValue="Disabled"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="Display/IntegerScaling"
        app:title="@string/settings_integer_upscaling"
        app:defaultValue="false"
        app:disableDependentsState="true"
        app:summary="@string/settings_summary_integer_upscaling"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="Display/LinearFiltering"
        app:title="@string/settings_linear_upscaling"
        app:defaultValue="true"
        app:dependency="Display/IntegerScaling"
        app:summary="@string/settings_summary_linear_upscaling"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="Display/Stretch"
        app:title="@string/settings_display_stretch"
        app:defaultValue="false"
        app:dependency="Display/IntegerScaling"
        app:summary="@string/settings_summary_display_stretch"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="Display/ShowOSDMessages"
        app:title="@string/settings_osd_show_messages"
        app:defaultValue="true"
        app:summary="@string/settings_summary_osd_show_messages"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="Display/ShowSpeed"
        app:title="@string/settings_osd_show_speed"
        app:defaultValue="false"
        app:summary="@string/settings_summary_osd_show_speed"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Display/ShowFPS"
        app:title="@string/settings_osd_show_show_fps"
        app:defaultValue="false"
        app:summary="@string/settings_summary_osd_show_fps"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Display/ShowVPS"
        app:title="@string/settings_osd_show_show_vps"
        app:defaultValue="false"
        app:summary="@string/settings_summary_osd_show_vps"
        app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat
        app:key="Display/ShowResolution"
        app:title="@string/settings_osd_show_show_resolution"
        app:defaultValue="false"
        app:summary="@string/settings_summary_osd_show_resolution"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
